# wool_supliers_web_scraper

./: setup.cfg  setup.py
.github/workflows/: main.yml
knitters_scraper/: scrapy.cfg
knitters_scraper/knitters_scraper/: items.py  middlewares.py  pipelines.py  settings.py
knitters_scraper/knitters_scraper/spiders/: knitters_scraper.json  scrap_wollplatz.py
markt_pilot_knitting_scraper.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_knitters_scraper.py
