[options]
install_requires =
    mypy
    pytest
    pytest-cov
    flake8
    black
    pydantic
    beautifulsoup4
    selenium
	setuptools
    requests
    scrapy


[test]
[tool:pytest]
testpaths = tests

[flake8]
exclude =
    .git
    .venv

max-line-length = 80
ignore = E201, E203, E231, E241, E266, E501, W291,W293, W503

[mypy]
warn_return_any = True
disallow_untyped_defs = True
ignore_missing_imports = True
